--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="Thomas Barrial">
+        <meta name="Description," content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque provident perspiciatis vero, a, quae quam eius officiis quos voluptatibus sit omnis veritatis debitis, repellat nisi reprehenderit impedit? Commodi, explicabo ab.">
+        <title>Find the precious!</title>
+        <link rel="stylesheet" href="style.css">    
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <a href="" title="HomePage"><li>FindThePrecious.com</li></a>
+                <a href="" title="FellowsPage"><li>Fellows</li></a>
+                <a href="" title="ContactPage"><li>Contact us</li></a>
+            </ul>
+        </nav>
+        <section id="caroussel">
+             <div>
+               <h2>Dangerous Fellowship try to destroy the ring</h2>
+               <p>Orcs,Goblins,Balrogs,protect your master Sauron</p>  
+              </div>
+        </section>
+            
+        <section>
+            <h2>Fellows wanted dead (or alive if you want to eat them later)</h2>
+        </section>
+        <section id="Profil">
+            <div>
+                <p>Reward 1000 gold coins</p>
+                <img src="https://cdn.pixabay.com/photo/2014/04/02/10/25/man-303792_1280.png" alt="ProfilPicture "  width="400" height="341">
+                <p>The Wizard</p>
+                <p>Small description...</p>
+              </div>
+            <div>
+                <p>DEAD</p>
+                <img src="https://cdn.pixabay.com/photo/2014/04/02/10/25/man-303792_1280.png" alt="ProfilPicture"  width="400" height="341" > 
+                <p>Hobbit #3</p>
+                <p>Small description...</p>
+              </div>
+            <div>
+                <p>Reward 250 goldcoins</p>
+                <img src="https://cdn.pixabay.com/photo/2014/04/02/10/25/man-303792_1280.png" alt="ProfilPicture"  width="400" height="341">
+                <p>Yummy Dwraf</p>
+                <p>Small description...</p>
+              </div>    
+        
+        </section>
+        <section id="Formulaire">
+        <form>
+            <h2>Contact us</h2>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="user_name">
+            <label for='email'>Email</label>
+            <input type="email" id="email" placeholder="@">
+            <label for="text">Home</label>
+            <input type="text" id="home" placeholder="&#8962;">
+            <input type="text" id="Message" placeholder="I have seen one of them">
+            <label for='text'>Message</label>
+            <textarea placeholder="Your message"></textarea>
+            <button>Send</button>
+        </form>
+        </section>
+       <footer>
+           <div>
+               <a href="" title="About">AboutUS</a>
+               <a href="" title="Fellows">Fellows</a>
+               <a href="" title="JoinUs">Join our army</a>
+               <a href="" title="Instagram">Instagram</a>
+           </div>
+           <div>
+               <a href="" title="FAQ">FAQ</a>
+               <a href="" title="RewardCondition">RewardConditions</a>
+               <a href="" title="Legal mentions">Legal mentions</a>
+           </div>
+           <div>
+            <a href="" title="WebStie">Sauron4Ever.com</a>
+            <a href="" title="Twitter">Follow him also on twitter</a>
+           </div>
+       </footer>
+    </body>
+</html>
 
